資金計画進捗管理機能の実装と見積もり設定の改善
- 見積もり設定タブに業者見積もり工事区分15区分を追加
- 仮設工事詳細設定ページの作成
- 資金計画ページに進捗インディケーターとナビゲーション機能を追加
- 業者見積もりとお客様見積もりタブの分離
- 見積もり管理テーブルの改善（粗利率・販売額列の追加/削除、状況表示の改善）
- サブタブ配下への進捗インディケーターの移動とコンパクト化

--- a/system_user_cms/user_project_detail_design.html
+++ b/system_user_cms/user_project_detail_design.html
@@ -75,7 +75,10 @@
               <a class="nav-link" href="user_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="user_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
+              <a class="nav-link" href="user_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 業者見積もり</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="user_project_detail_design_owner_estimate.html"><i class="bi bi-calculator"></i> お客様見積もり</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="user_project_detail_design_finance.html"><i class="bi bi-currency-yen"></i> 資金計画</a>
