--- a/system_user_cms/user_settings.html
+++ b/system_user_cms/user_settings.html
@@ -315,7 +315,349 @@
         </div>
         <!-- 見積もり設定 -->
         <div class="tab-pane fade" id="tab-quote" role="tabpanel" aria-labelledby="tab-quote-tab">
-          <p>見積もり設定が入ります</p>
+          <div class="p-4">
+            <h5 class="mb-4">業者見積もり工事区分マスタ</h5>
+            
+            <!-- サブタイトル1: 工事区分 -->
+            <div class="mb-5">
+              <h6 class="mb-3 text-primary">工事区分</h6>
+              <div class="table-responsive">
+                <table class="table table-striped table-hover small">
+                  <thead class="table-light">
+                    <tr>
+                      <th style="width: 80px;">番号</th>
+                      <th>工事区分名</th>
+                      <th style="width: 120px;">表示のON/OFF</th>
+                      <th style="width: 120px;">詳細設定</th>
+                      <th style="width: 100px;">操作</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>仮設工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>基礎工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>木工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>断熱工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>屋根工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>左官・防水工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>7</td>
+                      <td>外部建具工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>8</td>
+                      <td>内部建具工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>内装工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>10</td>
+                      <td>雑工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>11</td>
+                      <td>電気工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>12</td>
+                      <td>給排水工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>13</td>
+                      <td>住宅設備機器工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>14</td>
+                      <td>換気設備工事</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>15</td>
+                      <td>現場諸経費</td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="form-check form-switch m-0">
+                          <input class="form-check-input" type="checkbox" checked>
+                        </div>
+                      </td>
+                      <td>
+                        <i class="bi bi-pencil text-primary me-2" role="button" title="編集"></i>
+                        <i class="bi bi-trash text-danger" role="button" title="削除"></i>
+                        <a href="user_project_detail_estimate_detail_setup.html" class="btn btn-sm btn-outline-info ms-1" title="詳細設定">
+                          <i class="bi bi-gear"></i> 設定
+                        </a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="mt-3">
+                <button class="btn btn-primary btn-sm">
+                  <i class="bi bi-plus-circle"></i> 追加
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- 資金計画設定 -->
         <div class="tab-pane fade" id="tab-finance" role="tabpanel" aria-labelledby="tab-finance-tab">
