--- a/system_user_cms/user_project_detail_design_doc.html
+++ b/system_user_cms/user_project_detail_design_doc.html
@@ -75,7 +75,10 @@
               <a class="nav-link" href="user_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="user_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
+              <a class="nav-link" href="user_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 業者見積もり</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="user_project_detail_design_owner_estimate.html"><i class="bi bi-calculator"></i> お客様見積もり</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="user_project_detail_design_finance.html"><i class="bi bi-currency-yen"></i> 資金計画</a>
