お客様見積もり管理タブのサマリーテーブルに粗利額（税抜き）列を追加

--- a/system_user_cms/user_project_detail_design_owner_estimate.html
+++ b/system_user_cms/user_project_detail_design_owner_estimate.html
@@ -108,12 +108,12 @@
                         <table class="table table-bordered w-auto small-text">
                             <thead class="table-light">
                                 <tr>
-                                    <th>工事区分数</th><th>業者見積もり確定数</th><th>自動積算数</th><th>確定済み実行合計金額（税抜き）</th><th>粗利率</th><th>販売金額合計（税抜き）</th>
+                                    <th>工事区分数</th><th>業者見積もり確定数</th><th>自動積算数</th><th>確定済み実行合計金額（税抜き）</th><th>粗利率</th><th>粗利額（税抜き）</th><th>販売金額合計（税抜き）</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>21</td><td>7</td><td>21</td><td>¥11,397,600</td><td>34%</td><td>¥14,617,576</td>
+                                    <td>21</td><td>7</td><td>21</td><td>¥11,397,600</td><td>34%</td><td>¥3,219,976</td><td>¥14,617,576</td>
                                 </tr>
                             </tbody>
                         </table>
