--- a/system_user_cms/user_project_detail_estimate_detail_abc.html
+++ b/system_user_cms/user_project_detail_estimate_detail_abc.html
@@ -262,16 +262,19 @@
                         <div class="card-body p-0">
                             <table class="table table-hover mb-0">
                                 <thead class="table-light">
-                                    <tr><th>資料名称</th><th>既読人数</th><th>作成日時</th><th>アクション</th></tr>
+                                    <tr><th>資料名称</th><th>項目数</th><th>購読人数</th><th>既読人数</th><th>作成日時</th><th>アクション</th></tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>ABC建設見積書</td>
+                                        <td>1</td>
+                                        <td>3</td>
                                         <td>0</td>
                                         <td>2025/05/16 12:00</td>
                                         <td>
-                                            <button class="btn btn-sm btn-outline-primary me-1">アップロード</button>
-                                            <button class="btn btn-sm btn-outline-secondary">ダウンロード</button>
+                                            <button class="btn btn-sm btn-outline-primary me-1" data-bs-toggle="modal" data-bs-target="#uploadModal">アップロード</button>
+                                            <button class="btn btn-sm btn-outline-secondary me-1">ダウンロード</button>
+                                            <button class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#previewModal">プレビュー</button>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -283,25 +286,26 @@
                 <!-- チャット -->
                 <div class="tab-pane fade" id="tab-chat">
                     <div class="card mb-3 d-flex flex-column" style="min-height: 500px;">
-                        <!-- 検索フォーム -->
-                        <div class="card-header p-2">
-                            <div class="input-group input-group-sm">
-                                <input type="text" class="form-control" placeholder="メッセージ内検索">
-                                <button class="btn btn-outline-secondary" type="button">
-                                    <i class="bi bi-search"></i>
-                                </button>
-                            </div>
-                        </div>
                         <!-- チャットヘッダー -->
                         <div class="card-header p-2">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <h6 class="mb-0">業者見積もり_仮設工事_ABC建設</h6>
+                                    <div class="d-flex align-items-center mt-1">
+                                        <i class="bi bi-people me-1"></i>
+                                        <small class="text-muted">メンバー（7）</small>
+                                    </div>
                                     <small class="text-muted">最終更新: 2025/01/27 15:30</small>
                                 </div>
-                                <div>
-                                    <button class="btn btn-sm btn-outline-primary">
-                                        <i class="bi bi-plus-lg"></i> 新規メッセージ
+                                <div class="d-flex align-items-center">
+                                    <button class="btn btn-sm btn-outline-secondary me-2">
+                                        <i class="bi bi-search"></i>
+                                    </button>
+                                    <button class="btn btn-sm btn-outline-secondary me-2">
+                                        <i class="bi bi-info-circle"></i>
+                                    </button>
+                                    <button class="btn btn-sm btn-outline-secondary">
+                                        <i class="bi bi-three-dots-vertical"></i>
                                     </button>
                                 </div>
                             </div>
@@ -368,6 +372,9 @@
                         <!-- メッセージ入力エリア -->
                         <div class="card-footer p-2">
                             <div class="input-group">
+                                <button class="btn btn-outline-secondary" type="button">
+                                    <i class="bi bi-paperclip"></i>
+                                </button>
                                 <input type="text" class="form-control" placeholder="メッセージを入力...">
                                 <button class="btn btn-primary" type="button">
                                     <i class="bi bi-send"></i>
@@ -375,6 +382,56 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- アップロードモーダル -->
+    <div class="modal fade" id="uploadModal" tabindex="-1" aria-labelledby="uploadModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="uploadModalLabel">資料アップロード</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="uploadForm">
+                        <div class="mb-3">
+                            <label for="documentName" class="form-label">資料名</label>
+                            <input type="text" class="form-control" id="documentName" name="documentName" placeholder="資料名を入力してください" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="documentFile" class="form-label">ファイル選択</label>
+                            <input type="file" class="form-control" id="documentFile" name="documentFile" accept=".pdf,.doc,.docx" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+                    <button type="submit" form="uploadForm" class="btn btn-primary">アップロード</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- プレビューモーダル -->
+    <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="previewModalLabel">PDF資料プレビュー</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center">
+                        <i class="bi bi-file-pdf" style="font-size: 4rem; color: #dc3545;"></i>
+                        <h6 class="mt-3">PDF資料が表示されます</h6>
+                        <p class="text-muted">ここにPDFの内容が表示されます</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
                 </div>
             </div>
         </div>
