--- a/system_user_cms/user_project_detail_estimate_detail_abc.html
+++ b/system_user_cms/user_project_detail_estimate_detail_abc.html
@@ -76,18 +76,48 @@
             <!-- ABC建設情報 -->
             <div class="card mb-3">
                 <div class="card-body">
-                    <h3>ABC建設</h3>
-                    <span class="badge bg-danger mb-3">見積もり依頼中</span>
-                    <div class="table-responsive mb-3">
-                        <table class="table table-bordered small-text">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <div>
+                            <h3 class="mb-2">ABC建設</h3>
+                            <span class="badge bg-danger">見積もり依頼中</span>
+                        </div>
+                        <button class="btn btn-outline-secondary btn-sm" onclick="toggleMemberList()">
+                            <i class="bi bi-people me-1"></i> 担当者一覧
+                            <i class="bi bi-chevron-down" id="memberListIcon"></i>
+                        </button>
+                    </div>
+                    <div id="memberListTable" class="table-responsive" style="display: none;">
+                        <table class="table table-striped table-hover small-text">
+                            <thead class="table-light">
+                                <tr>
+                                    <th style="width: 120px;">名前</th>
+                                    <th style="width: 150px;">名前（カナ）</th>
+                                    <th style="width: 120px;">職種</th>
+                                    <th style="width: 200px;">メール</th>
+                                    <th style="width: 150px;">電話番号</th>
+                                </tr>
+                            </thead>
                             <tbody>
                                 <tr>
-                                    <th class="table-light">電話番号</th>
-                                    <td>03-3444-5555</td>
-                                    <th class="table-light">担当者名</th>
                                     <td>山田太郎</td>
-                                    <th class="table-light">email</th>
+                                    <td>ヤマダタロウ</td>
+                                    <td>営業担当</td>
                                     <td>yamada@abc_con.com</td>
+                                    <td>03-3444-5555</td>
+                                </tr>
+                                <tr>
+                                    <td>佐藤花子</td>
+                                    <td>サトウハナコ</td>
+                                    <td>見積担当</td>
+                                    <td>sato@abc_con.com</td>
+                                    <td>03-3444-5556</td>
+                                </tr>
+                                <tr>
+                                    <td>田中一郎</td>
+                                    <td>タナカイチロウ</td>
+                                    <td>現場監督</td>
+                                    <td>tanaka@abc_con.com</td>
+                                    <td>03-3444-5557</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -124,7 +154,7 @@
                                 <tr>
                                     <th>項目</th>
                                     <th>摘要</th>
-                                    <th>数量定義</th>
+                                    <th>社内摘要</th>
                                     <th class="text-end">数量</th>
                                     <th>単位</th>
                                     <th class="text-end">実行単価（税抜き）</th>
@@ -442,5 +472,23 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../style.js"></script>
+    
+    <script>
+        // 担当者一覧の表示・非表示切り替え
+        function toggleMemberList() {
+            const memberListTable = document.getElementById('memberListTable');
+            const memberListIcon = document.getElementById('memberListIcon');
+            
+            if (memberListTable.style.display === 'none') {
+                // 表示する
+                memberListTable.style.display = 'block';
+                memberListIcon.className = 'bi bi-chevron-up';
+            } else {
+                // 非表示にする
+                memberListTable.style.display = 'none';
+                memberListIcon.className = 'bi bi-chevron-down';
+            }
+        }
+    </script>
 </body>
 </html>
